tests/fixtures/invalid/pow_bytes_list.py
# Cannot call pow() with Bytes, List[int]
x = pow(b"hello", [1, 2, 3])
